# onitama

./: .dockerignore  .eslintignore  .eslintrc  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Dockerfile.remoteai  LICENSE  README.md  config-overrides.js  index.html  package.json
.github/workflows/: docker-image.yml
onitamalib/: Cargo.toml
onitamalib/src/: board.rs  cards.rs  game.rs  lib.rs  messages.rs  models.rs  multiplayer.rs  singleplayer.rs
onitamalib/src/agents/: agents.rs  alphabeta.rs  greedy.rs  heuristics.rs  minimax.rs  mod.rs  montecarlo.rs  move_gen.rs  ninja_logic.rs
onitamalib/src/gamemodes/: base.rs  local.rs  mod.rs  multiplayer.rs  singleplayer.rs  utils.rs
onitamalib/src/tests/: mod.rs  test_alphabeta.rs  test_montecarlo.rs  utils.rs
onitamaserver/: Cargo.toml
onitamaserver/src/: actors.rs  agents.rs  main.rs  messages.rs  queues.rs  rooms.rs  routes.rs  utils.rs
public/: index.html  manifest.json
src/: AiSelect.jsx  App.jsx  GameBoard.jsx  GameCard.jsx  GameGrid.jsx  GameMoves.jsx  GameOver.jsx  GameSquare.jsx  GithubRibbon.jsx  Home.jsx  Loading.jsx  LocalGame.jsx  RemoteGame.jsx  SinglePlayerGame.jsx  TrainingGame.jsx  TrainingSelect.jsx  WaitingOverlay.jsx  ai.worker.js  config.js  events.js  game.rs  index.jsx  logger.js  menuStyles.js  meta.js  models.rs  service-worker.js  serviceWorkerRegistration.js  theme.js  trainer.worker.js  updateManager.jsx  useOnitama.js  useSocket.js
src/GameBoard/: GameBoard.jsx  GameCard.jsx  GameGrid.jsx  GameHand.jsx  GameMoves.jsx  GameOver.jsx  GameScore.jsx  GameSquare.jsx  GameTurn.jsx  LastMove.jsx  index.js  props.js
src/Rules/: Markdown.jsx  Rules.jsx  index.js  rulesData.js
src/Settings/: Settings.jsx
src/constants/: SpecialCards.js
src/hooks/: useGameSettings.js  useLocalGame.js  useMultiplayer.js  useSingleplayer.js
src/onitamalib/src/: cards.rs  lib.rs  main.rs
src/utils/: cardSetNames.js  moveUtils.js
static/: main.css
