[package]
name = "onitamalib"
version = "0.1.0"
authors = ["Jack Adamson <jack@mrfluffybunny.com>"]
edition = "2018"
description = "A library for managing the game logic of Onitama"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "0.1"
console_error_panic_hook = "0.1.6"
enum-iterator = "0.6.0"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.2.1"
js-sys = "0.3.45"
log = "0.4.6"
rand = { version = "0.8.3", features = ["default", "alloc", "small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.3.0"
serde_bytes = "0.11.5"
serde_cbor = "0.10"
wasm-bindgen = { version="0.2.63", features = ["serde-serialize"] }
wasm-logger = "0.2.0"
wee_alloc = { version = "0.4.5", optional = true }
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }

[dev-dependencies]
indicatif = { version = "0.16.2" }

[dependencies.web-sys]
version = "0.3.51"
features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]

[dependencies.wasm-bindgen-futures]
features = ["futures_0_3"]
version = "^0.3"

[features]
agent = []
alphabeta = ["agent"]
default = []
