[package]
name = "onitamalib"
version = "0.1.0"
authors = ["Jack Adamson <jack@mrfluffybunny.com>"]
repository = "https://github.com/jackadamson/onitama"
edition = "2018"
description = "A library for managing the game logic of Onitama"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.6" }
enum-iterator = "0.6.0"
getrandom = { version = "0.2" }
gloo = { version = "0.2.1", optional = true }
js-sys = { version = "0.3.45", optional = true }
log = "0.4.6"
rand = { version = "0.8.3", features = ["default", "alloc", "small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.3.0"
serde_bytes = "0.11.5"
serde_cbor = "0.10"
wasm-bindgen = { version="0.2.63", features = ["serde-serialize"], optional = true }
wasm-logger = { version = "0.2.0", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
instant = { version = "0.1" }
indicatif = { version = "0.16.2", optional = true }
rand_mt = { version = "4.0.1", features = ["rand-traits"] }

[dependencies.web-sys]
optional = true
version = "0.3.51"
features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]

[dependencies.wasm-bindgen-futures]
optional = true
features = ["futures_0_3"]
version = "^0.3"

[[bin]]
name = "benchmarkagents"
required-features = ["agent", "benchmark"]

[features]
default = []
agent = []
benchmark = ["indicatif"]
web = [
    "gloo",
    "js-sys",
    "wasm-bindgen",
    "wasm-logger",
    "wasm-bindgen-futures",
    "web-sys",
    "wee_alloc",
    "instant/wasm-bindgen",
    "instant/inaccurate",
    "getrandom/js",
]
