[package]
name = "onitamaserver"
version = "0.1.0"
authors = ["Jack Adamson <jack@mrfluffybunny.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
log = "0.4.14"
onitamalib = { path = "../onitamalib", features = ["agent"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
tokio = { version = "1.7.0", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
