[package]
name = "onitamaserver"
version = "0.1.0"
authors = ["Jack Adamson <jack@mrfluffybunny.com>"]
edition = "2018"
license = "MIT"
default-run = "onitamaserver"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
# Yeah, relying on beta releases is probably a bad idea, but I want tokio 1.x :'(
actix-files = "0.6.0-beta.6"
actix-web = "4.0.0-beta.8"
actix-web-actors = "4.0.0-beta.6"
futures = "0.3.15"
log = "0.4.14"
onitamalib = { path = "../onitamalib", features = ["agent"] }
pretty_env_logger = "0.4.0"
rand = { version = "0.8.3", features = ["default", "alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
tokio = { version = "^1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
