[package]
name = "onitamaserver"
version = "0.1.0"
authors = ["Jack Adamson <jack@mrfluffybunny.com>"]
repository = "https://github.com/jackadamson/onitama"
edition = "2018"
license = "MIT"
default-run = "onitamaserver"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onitamalib = { path = "../onitamalib" }

actix = "0.12.0"
actix-files = "0.6.2"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
cfg-if = "1.0.0"
futures = "0.3.15"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rand = { version = "0.8.3", features = ["default", "alloc"] }
serde = { version = "1.0", features = ["default", "derive"] }
serde_cbor = "0.11.2"
tokio = { version = "^1", features = ["full"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
slog = "2.7.0"
slog-json = "2.6.1"

[features]
agent = ["onitamalib/agent"]
